--- a/index.html
+++ b/index.html
@@ -7,24 +7,20 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <title>EME OLYMPIAD</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Fullscreen Background Image Slideshow with CSS3 - A Css-only fullscreen background image slideshow" />
-        <meta name="keywords" content="css3, css-only, fullscreen, background, slideshow, images, content" />
-        <meta name="author" content="Codrops" />
-        <link rel="shortcut icon" href="../favicon.ico"> 
+        <title>OLYMPIAD</title>
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="css/style2.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script type="text/javascript" src="js/modernizr.custom.86080.js"></script>
     </head>
     <body id="page">
         <ul class="cb-slideshow">
-            <li><span>Image 01</span><div><h3>COMING SOON</h3></div></li>
-            <li><span>Image 02</span><div><h3>COMING SOON</h3></div></li>
-            <li><span>Image 03</span><div><h3>COMING SOON</h3></div></li>
-            <li><span>Image 04</span><div><h3>COMING SOON</h3></div></li>
-            <li><span>Image 05</span><div><h3>COMING SOON</h3></div></li>
-            <li><span>Image 06</span><div><h3>COMING SOON</h3></div></li>
+            <li><span>Image 01</span></li>
+            <li><span>Image 02</span></li>
+            <li><span>Image 03</span></li>
+            <li><span>Image 04</span></li>
+            <li><span>Image 05</span></li>
+            <li><span>Image 06</span></li>
         </ul>
+		<div class="coming-soon"><h3>COMING SOON</h3></div>
     </body>
 </html>
