--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
     <head>
+		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
         <title>OLYMPIAD</title>
