--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <title>OLYMPIAD</title>
+		<link rel="icon" type="image/png" href="logo.png" />
+        <title>EME Olympiad'19</title>
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 		<script type="text/javascript" src="js/modernizr.custom.86080.js"></script>
