--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
     <head>
 		<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<link rel="icon" type="image/png" href="logo.png" />
@@ -23,6 +24,6 @@
             <li><span>Image 05</span></li>
             <li><span>Image 06</span></li>
         </ul>
-		<div class="coming-soon"><h3>COMING SOON</h3></div>
+		<div class="coming-soon"><h3>EME OLMPIAD'19 <br><br> COMING SOON</h3></div>
     </body>
 </html>
