--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
     <head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Pacifico" rel="stylesheet">
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -23,6 +24,11 @@
             <li><span>Image 05</span></li>
             <li><span>Image 06</span></li>
         </ul>
-		<div class="coming-soon"><h3 id="eme">EME OLMPIAD'19 <br></h3><h3 id="soon"> COMING SOON</h3></div>
-    </body>
+		
+	<div class="coming-soon"><h3 id="eme">EME OLMPIAD'19 <br></h3><h3 id="soon"> COMING SOON</h3></div>
+    <div class="social">
+   <a target="_blank" href="https://www.instagram.com/emeolympiad/"><i class="fa fa-3x fa-instagram"></i></a>
+   <a target="_blank" href="https://www.facebook.com/emeolympiad.official/"><i class="fa fa-3x fa-facebook-square"></i></a>
+   </div></a>
+	</body>
 </html>
