--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><span>Image 06</span></li>
         </ul>
 		
-	<div class="coming-soon"><h3 id="eme">EME OLMPIAD'19 <br></h3><h3 id="soon"> COMING SOON</h3></div>
+	<div class="coming-soon"><h3 id="eme">EME OLYMPIAD'19 <br></h3><h3 id="soon"> COMING SOON</h3></div>
     <div class="social">
    <a target="_blank" href="https://www.instagram.com/emeolympiad/"><i class="fa fa-3x fa-instagram"></i></a>
    <a target="_blank" href="https://www.facebook.com/emeolympiad.official/"><i class="fa fa-3x fa-facebook-square"></i></a>
